# contaix

./: .buildinfo  CHANGELOG.md  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg  table_of_contents.html
.claude/: CLAUDE.md
.claude/skills/: contaix-acquire-docs  contaix_docs_to_markdown  contaix_web_aggregate
.github/workflows/: ci.yml
_modules/: index.html
_modules/contaix/: aggregation.html  code.html  skills.html  urls.html  util.html  web.html
_sources/: table_of_contents.rst.txt
_sources/module_docs/: contaix.rst.txt
_sources/module_docs/contaix/: aggregation.rst.txt  code.rst.txt  markdown.rst.txt  skills.rst.txt  urls.rst.txt  util.rst.txt  web.rst.txt
contaix/: __init__.py  aggregation.py  code.py  markdown.py  skills.py  urls.py  util.py  web.py
contaix/data/skills/contaix_docs_to_markdown/: SKILL.md
contaix/data/skills/contaix_web_aggregate/: SKILL.md
contaix/tests/: test_markdown.py  utils_for_testing_contaix.py
docsrc/: index.rst
misc/: architecture_notes.md  contaix_wip.ipynb  web_module_design.md
module_docs/: contaix.html
module_docs/contaix/: aggregation.html  code.html  markdown.html  skills.html  urls.html  util.html  web.html
skills/contaix-acquire-docs/: SKILL.md
skills/contaix_docs_to_markdown/: SKILL.md
