[metadata]
name = contaix
version = 0.0.2
url = https://github.com/thorwhalen/contaix
platforms = any
description_file = README.md
root_url = https://github.com/thorwhalen/
license = mit
author = Thor Whalen
description = Tools to make contexts for AI
long_description = file:README.md
long_description_content_type = text/markdown
keywords = 
display_name = contaix

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 
	dol
	lkj
	scraped
	pypdf
	mammoth
	pandas
	pptx
	html2text
	nbconvert
	nbformat
	openpyxl

# [options.extras_require]
# pdf = pypdf
# office = mammoth; pandas; pptx
# html = html2text
# jupyter = nbconvert; nbformat
# all = pypdf; mammoth; pandas; pptx; html2text; nbconvert; nbformat; python-magic

