[metadata]
name = contaix
version = 0.0.2
url = https://github.com/thorwhalen/contaix
platforms = any
description_file = README.md
root_url = https://github.com/thorwhalen/
license = mit
author = Thor Whalen
description = Tools to make contexts for AI
long_description = file:README.md
long_description_content_type = text/markdown
keywords = 
display_name = contaix

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires =
	dol
	dn[html]
	lkj
	scraped
	html2text
	hubcap

[options.extras_require]
pdf =
	pdfdol
all =
	pdfdol
	dn[all]

